--- a/pages/questionMarks.html
+++ b/pages/questionMarks.html
@@ -3,35 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/styles.css">
     <title>Document</title>
 </head>
 <body>
      <header>
-        <img src="../assets/logo.jpg" alt="" width="75px">
-        <nav>
-            <ul>
-                <li class="li-nav">
-                    <a class="nav-link" href="../index.html">Home</a>
-                </li>
-
-                <li class="li-nav">    
-                    <a class="nav-link" href="sobreNosotros.html">Sobre Nosotros</a>
-                </li>
-
-                <li class="li-nav">
-                    <a class="nav-link" href="seUnCazador.html">Se Un Cazador</a>
-                </li>
-
-                <li class="li-nav">
-                    <a class="nav-link" href="#">Criaturas Míticas</a>
-                </li>
-
-                <li class="li-nav">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <img src="/assets/logo.jpg" alt="Bootstrap" width="60" height="50">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Más criaturas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sobreNosotros.html">Sobre nosotros</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Modos de contacto
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="seUnCazador.html">Se un cazador</a></li>
+                                <li><a class="dropdown-item" href="contacto.html">Número de emergencias</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     
@@ -72,5 +81,8 @@
         <p class="p-cuerpo">©2025 AACCA. Copyright todos los derechos reservados.</p>
         <img src="../assets/logo.jpg" alt="" width="75px">
     </footer>
+
+    <!-- Bootstrap -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
