--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"></a>
-                <img src="/assets/logo.jpg" alt="Bootstrap" width="60" height="50">
+                <img src="./assets/logo.jpg" alt="Bootstrap" width="60" height="50">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -24,18 +24,18 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/questionMarks.html">Más criaturas</a>
+                            <a class="nav-link" href="./pages/questionMarks.html">Más criaturas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/sobreNosotros.html">Sobre nosotros</a>
+                            <a class="nav-link" href="./pages/sobreNosotros.html">Sobre nosotros</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Modos de contacto
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/pages/seUnCazador.html">Se un cazador</a></li>
-                                <li><a class="dropdown-item" href="/pages/contacto.html">Número de emergencias</a></li>
+                                <li><a class="dropdown-item" href="./pages/seUnCazador.html">Se un cazador</a></li>
+                                <li><a class="dropdown-item" href="./pages/contacto.html">Número de emergencias</a></li>
                             </ul>
                         </li>
                     </ul>
