--- a/pages/questionMarks.html
+++ b/pages/questionMarks.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"></a>
-                <img src="/assets/logo.jpg" alt="Bootstrap" width="60" height="50">
+                <img src="./assets/logo.jpg" alt="Bootstrap" width="60" height="50">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
