cambios minimos en los articulos. mejorar con tiempo.

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,7 +46,7 @@
     
     <main>
 
-        <section class="h-titulos">
+        <section class="h-titulos col-12">
 
             <h1>Ponte en contacto con nosotros.</h1>
             <p class="p-cuerpo">Si se encuentra bajo el ataque de alguna de estas criaturas u otra de la que no se tiene registro llamé a los siguientes números.</p>
