--- a/pages/seUnCazador.html
+++ b/pages/seUnCazador.html
@@ -45,7 +45,7 @@
     <header>    
      
     <main>
-        <section class="h-titulos">
+        <section class="h-titulos col-12">
 
             <h1>Unite a nuestras filas</h1>
             <p class="p-cuerpo">Si tenés más de 18 años y estás interesado en formar parte de nuestra asociación escribinos al mail <a href="Quierosercazador@aacca.gob.ar">Quierosercazador@aacca.gob.ar.</a></p> 
