--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -45,7 +45,7 @@
     </header>
     
     <main>
-        <section class="h-titulos">
+        <section class="h-titulos col-12">
 
             <h1>Sobre Nosotros</h1>
             <p class="p-cuerpo">Somos una asociación sin fines de lucro y respaldada por el gobierno, que tiene como objetivo hacer prevalecer la paz de los ciudadanos argentinos frente a los numerosos casos de
