integración en proceso a sass, un poco más de proligidad en logos y textos(no la suficiente)

--- a/pages/questionMarks.html
+++ b/pages/questionMarks.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"></a>
-                <img src="../assets/logo.jpg" alt="Bootstrap" width="60" height="50">
+                <img src="../assets/logo2.png" alt="Bootstrap" width="80" height="70">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -59,7 +59,7 @@
                 <h2>El Nahuelito.</h2>
                 <p class="p-cuerpo">Esta enorme criatura se encuentra viviendo en las profundidades del lago Nahuel Huapi, se la considera sumamente inofensiva y sale a la superficie muy de vez en cuando,
                 es importante preservarla debido a que mantiene la tranquilidad de las aguas y las mantiene limpias para la supervivencias de las otras especies marinas.</p>
-                <img src="../assets/nahuelito.jpg" alt="" width="512" height="512">
+                <img class="regular-img" src="../assets/nahuelito.jpg" alt="" >
 
             </article>
             
@@ -69,7 +69,7 @@
                 <p class="p-cuerpo">Esta suerte de duende se encuentra en los terrenos rurales de todo el país, es travieso y vengativo, por lo que para mantenerlo a raya los habitantes del campo suelen
                 ofrecerle alcohol y cigarrillos. El pomperito cumple el rol de cuidador de la fauna y la flora por lo que es de suma importancia no hacerle ningún daño.
                 Se lo ha visto en varios lugares a la vez, debido a esto no se sabe si se trata de una o varias criaturas que cumplen un mismo rol.</p>
-                <img src="../assets/pombero.jpg" alt="" width="512" height="512">
+                <img class="regular-img" src="../assets/pombero.jpg" alt="" >
 
             </article>
            
@@ -79,7 +79,7 @@
 
     <footer>
         <p class="p-cuerpo">©2025 AACCA. Copyright todos los derechos reservados.</p>
-        <img src="../assets/logo.jpg" alt="" width="75px">
+        <img class="logo-footer" src="../assets/logo2.png" alt="" >
     </footer>
 
     <!-- Bootstrap -->
