--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"></a>
-                <img src="./assets/logo.jpg" alt="Bootstrap" width="60" height="50">
+                <img class="logo-nav" src="./assets/logo2.png" alt="Bootstrap" >
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -58,8 +58,8 @@
             <article class="h-titulos col-12 col-md-6">
 
                 <h2>Wendigo</h2>
-                <img src="./assets/wendigo1.jpg" alt="" width="512" height="512">
-                <img src="./assets/wendigo2.jpg" alt="" width="512" height="512">
+                <img class="regular-img" src="./assets/wendigo1.jpg" alt="" >
+                <img class="regular-img" src="./assets/wendigo2.jpg" alt="" >
                 <p class="p-cuerpo">Criatura del folklore americano que se manifestó en territorio argentino.
                 Los casos de desapariciones que rodean a esta criatura son alarmantemente numerosos. Se trata de un ser grande y violento, con un apetito insaciable por la carne humana,
                 por lo que no se conforman únicamente con una víctima. Se recomienda contactarnos inmediatamente ante el avistamiento de un Wendigo.</p>
@@ -69,7 +69,7 @@
             <article class="h-titulos col-12 col-md-6">
                 
                 <h2>Lobizón</h2>
-                <img src="./assets/lobizón.jpg" alt="" width="512" height="512">
+                <img class="regular-img" src="./assets/lobizón.jpg" alt="" >
                 <p class="p-cuerpo">El Lobizón es el licantropo de nuestras tierras, de día es humano pero en las noches de luna llena se transforma en una criatura de descomunal fuerza, grandes colmillos,
                 grandes y afiladas garras y una apariencia que hace recordar a un lobo. Se cree que el septimo hijo varón de una pareja tiene mayor predisposición a tranformarse en un
                 lobizón, pero no son los únicos, también la tienen aquellos que son victimas de una maldición, que tienen contacto con las artes ocuras o aquellos que se atrevierona a romper 
@@ -88,7 +88,7 @@
 
     <footer>
         <p class="p-cuerpo">©2025 AACCA. Copyright todos los derechos reservados.</p>
-        <img src="../assets/logo.jpg" alt="" width="75px">
+        <img class="logo-footer" src="./assets/logo2.png" alt="">
     </footer>
 
     <!-- Bootstrap -->
