--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"></a>
-                <img src="../assets/logo.jpg" alt="Bootstrap" width="60" height="50">
+                <img src="../assets/logo2.png" alt="Bootstrap" width="80" height="70">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -66,7 +66,7 @@
 
     <footer>
         <p class="p-cuerpo">©2025 AACCA. Copyright todos los derechos reservados.</p>
-        <img src="../assets/logo.jpg" alt="" width="75px">
+        <img class="logo-footer" src="../assets/logo2.png" alt="" >
     </footer>
 
     <!-- Bootstrap -->
