se agrego un carousel con pequeñas descripciones para las imagenes, se configuraron un par de variables, no encontré como usar los mixins

--- a/pages/seUnCazador.html
+++ b/pages/seUnCazador.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"></a>
-                <img src="../assets/logo2.png" alt="Bootstrap" width="80" height="70">
+                <img class="logo-nav" src="../assets/logo2.png" alt="Bootstrap" width="80" height="70">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -45,7 +45,7 @@
     <header>    
      
     <main>
-        <section class="h-titulos col-12">
+        <section class="h-titulos col-12 ">
 
             <h1>Unite a nuestras filas</h1>
             <p class="p-cuerpo">Si tenés más de 18 años y estás interesado en formar parte de nuestra asociación escribinos al mail <a href="Quierosercazador@aacca.gob.ar">Quierosercazador@aacca.gob.ar.</a></p> 
