--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"></a>
-                <img src="../assets/logo2.png" alt="Bootstrap" width="80" height="70">
+                <img class="logo-nav" src="../assets/logo2.png" alt="Bootstrap" width="80" height="70">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
